app/styles/sections/_header.scss
.header {
  position: fixed;
  z-index: 100;
  background: $color-white;
  width: 100%;
  height: 62px;
  top: 0;
  box-shadow: 0 0 10px 0px rgba(0,0,0,0.2);
  padding: 5px;

  .nav {
    margin-top: 16px;
    font-size: 1em;
    @include breakpoint(xl) { font-size: 1.25em; margin-top: 14px; }

    a {
      text-decoration: none;
      font-weight: bold;
      margin-left: .5em;
    }
  }

  .hamburger {
    background-image: url('../images/hamburger.svg');
    background-size: cover;
    font-size: 0;
    display: inline-block;
    width: 30px;
    height: 30px;
    float: right;
    margin-top: 10px;
    margin-right: 4px;
  }

  .hamburger-menu {
    background: $color-white;
    width: calc(100% + 10px);
    margin: 0 -5px;

    a {
      display: block;
      border-bottom: 1px solid $color-light-gray;
      text-align: center;
      font-size: 1.5em;
      line-height: 2.5em;
      text-decoration: none;
    }
  }

  h1 {
    margin: 0;
    text-align: right;
    display: inline-block;
    vertical-align: middle;
    font-size: 1.25rem;
    // white-space: nowrap;

    @include breakpoint(m) {
      text-align: center;
      margin-top: 8px;
      font-size: 2rem;
    }
  }

  img {
    max-width: 100%;
    max-height: 50px;
    display: inline-block;
    vertical-align: middle;
  }
}

body {
  margin-top: 60px;
}

